Handle custom and document (#42)
Support `@HandleCustom` and `@HandleDocument`

Also: Enable setting retention time for message logs